# esp-rainmaker-common

./: .gitlab-ci.yml  .pre-commit-config.yaml  CMakeLists.txt  Kconfig  README.md  idf_component.yml
.github/workflows/: upload_components.yml
.pre-commit/: license_header.txt
ci/: check_version_bump.py  validate_components.py
components/rmaker_cmd_resp/: CMakeLists.txt  Kconfig  README.md  idf_component.yml
components/rmaker_cmd_resp/include/: esp_rmaker_cmd_resp.h
components/rmaker_cmd_resp/src/: cmd_resp.c
components/rmaker_common_events/: CMakeLists.txt  README.md  idf_component.yml
components/rmaker_common_events/include/: esp_rmaker_common_events.h
components/rmaker_common_events/src/: common_events.c
components/rmaker_console/: CMakeLists.txt  Kconfig  README.md  idf_component.yml
components/rmaker_console/include/: esp_rmaker_common_console.h
components/rmaker_console/src/: rmaker_common_cmds.c  rmaker_console.c
components/rmaker_system_ctrl/: CMakeLists.txt  README.md  idf_component.yml
components/rmaker_system_ctrl/include/: esp_rmaker_system_ctrl.h
components/rmaker_system_ctrl/src/: system_ctrl.c
components/rmaker_time_sync/: CMakeLists.txt  Kconfig  README.md  idf_component.yml
components/rmaker_time_sync/include/: esp_rmaker_time_sync.h
components/rmaker_time_sync/src/: time_sync.c
components/rmaker_work_queue/: CMakeLists.txt  Kconfig  README.md  idf_component.yml
components/rmaker_work_queue/include/: esp_rmaker_work_queue.h
components/rmaker_work_queue/src/: work_queue.c
include/: esp_rmaker_cmd_resp.h  esp_rmaker_factory.h  esp_rmaker_mem_alloc.h  esp_rmaker_mqtt_glue.h  esp_rmaker_utils.h
src/: cmd_resp.c  create_APN3_PPI_string.c  factory.c  time.c  utils.c  work_queue.c
src/console/: rmaker_common_cmds.c  rmaker_console.c  rmaker_console_internal.h
src/esp-mqtt/: esp-mqtt-glue.c
test_app/: .build-test-rules.yml  .gitignore  CMakeLists.txt  README.md  conftest.py  env_config.yml  pytest.ini  pytest_rmaker_common.py  requirements.txt  run_test.py  run_tests.sh  sdkconfig.ci.linux  sdkconfig.defaults  setup_hardware_tests.sh
test_app/main/: CMakeLists.txt  idf_component.yml  test_app_main.c  test_rmaker_utils.c  test_work_queue.c
